[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/LanguageOptionMenu.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="LanguageHBoxContainer" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VSeparator" type="VSeparator" parent="."]
margin_right = 338.0
margin_bottom = 600.0
rect_min_size = Vector2( 338, 0 )
size_flags_vertical = 3
custom_styles/separator = SubResource( 1 )

[node name="LanguageOptionsVBoxContainer" type="VBoxContainer" parent="."]
margin_left = 342.0
margin_right = 438.0
margin_bottom = 600.0
alignment = 1

[node name="LanguageHBoxContainer" type="HBoxContainer" parent="LanguageOptionsVBoxContainer"]
margin_top = 290.0
margin_right = 96.0
margin_bottom = 310.0

[node name="LanguageLabel" type="Label" parent="LanguageOptionsVBoxContainer/LanguageHBoxContainer"]
margin_top = 3.0
margin_right = 63.0
margin_bottom = 17.0
text = "Language:"

[node name="LanguageOptionButton" type="OptionButton" parent="LanguageOptionsVBoxContainer/LanguageHBoxContainer"]
margin_left = 67.0
margin_right = 96.0
margin_bottom = 20.0
size_flags_horizontal = 10

[node name="VSeparator2" type="VSeparator" parent="."]
margin_left = 442.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/separator = SubResource( 1 )
